--- a/Microservices/HumanResources/src/main/resources/bootstrap.properties
+++ b/Microservices/HumanResources/src/main/resources/bootstrap.properties
@@ -31,4 +31,6 @@ spring.r2dbc.mybatis.map-underscore-to-camel-case= true
 spring.liquibase.url = jdbc:mysql://localhost/human_resources_db?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.liquibase.user= root
 spring.liquibase.password = Antares927@
+spring.main.allow-bean-definition-overriding=true
+
 
