--- a/Microservices/pom.xml
+++ b/Microservices/pom.xml
@@ -28,6 +28,33 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
+
+
+			<!-- LOCALSTACK -->
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>dynamodb</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>s3</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>cloud.localstack</groupId>
+				<artifactId>localstack-utils</artifactId>
+				<version>0.2.1</version>
+				<scope>test</scope>
+			</dependency>
+
+
+			<!-- AWS -->
+			<dependency>
+			  <groupId>software.amazon.awssdk</groupId>
+			  <artifactId>aws-sdk-java</artifactId>
+			  <version>2.29.19</version>
+			</dependency>
+
+
 			<!--
 			<dependency>
 				<groupId>org.camunda.bpm</groupId>
@@ -119,10 +146,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 <!--
 		<dependency>
