--- a/Microservices/pom.xml
+++ b/Microservices/pom.xml
@@ -25,6 +25,7 @@
 		<module>Products</module>
 		<module>Accountancy</module>
 		<module>ElectoralCourt</module>
+		
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -107,6 +108,14 @@
 		</dependency>
 
 -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
+		<dependency>
+			<groupId>org.springframework.statemachine</groupId>
+			<artifactId>spring-statemachine-core</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
