Se agrega Penal y se refactoriza codigo

--- a/Microservices/pom.xml
+++ b/Microservices/pom.xml
@@ -25,7 +25,7 @@
 		<module>Products</module>
 		<module>Accountancy</module>
 		<module>ElectoralCourt</module>
-		
+		<module>StateMachine</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
