--- a/ApiGateway/src/main/resources/application.yaml
+++ b/ApiGateway/src/main/resources/application.yaml
@@ -31,6 +31,11 @@ spring:
         uri: lb://ELECTORALCOURT
         predicates:
           - Path=/electoralcourt/**
+      routes[4]:
+        id: statemachine
+        uri: lb://STATEMACHINE
+        predicates:
+          - Path=/statemachine/**
       default-filters: TokenRelay
   security:
     oauth2:
