--- a/Microservices/StateMachine/src/main/resources/bootstrap.properties
+++ b/Microservices/StateMachine/src/main/resources/bootstrap.properties
@@ -1,13 +1,13 @@
-spring.application.name=StateMachine
-spring.cloud.config.url=http://localhost:8888
-spring.cloud.config.profile=dev
+spring.application.name=statemachine
+#spring.cloud.config.url=http://localhost:8888
+#spring.cloud.config.profile=dev
 management.endpoints.web.exposure.include=*
-spring.cloud.vault.application-name=human-resources
-spring.cloud.vault.host=localhost
-spring.cloud.vault.port=8200
-spring.cloud.vault.scheme=http
-spring.cloud.vault.authentication=TOKEN
-spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+#spring.cloud.vault.application-name=human-resources
+#spring.cloud.vault.host=localhost
+#spring.cloud.vault.port=8200
+#spring.cloud.vault.scheme=http
+#spring.cloud.vault.authentication=TOKEN
+#spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
