Se refactoriza StateMachineApplication

--- a/Microservices/ElectoralCourt/src/main/resources/bootstrap.properties
+++ b/Microservices/ElectoralCourt/src/main/resources/bootstrap.properties
@@ -20,7 +20,7 @@ spring.main.allow-circular-references = true
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/delibolis-microservices-realm
 spring.cache.jcache.config=ehcache.xml
 
-server.r2dbc.mybatis.mapper-locations=classpath*:com/democracy/electoral_court/mybatis/r2dbc/mappers/*.xml
+spring.r2dbc.mybatis.mapper-locations=classpath*:com/democracy/electoral_court/mybatis/r2dbc/mappers/*.xml
 spring.r2dbc.mybatis.mapper-scan=com.democracy.electoral_court.infrastructure.repository.mybatis.r2dbc.mappers
 spring.r2dbc.mybatis.r2dbc-url=r2dbc:mysql://localhost/electoral_court_db
 spring.r2dbc.mybatis.username=raraherher
