--- a/Microservices/StateMachine/src/main/resources/bootstrap.properties
+++ b/Microservices/StateMachine/src/main/resources/bootstrap.properties
@@ -1,14 +1,14 @@
 spring.application.name=statemachine
-#spring.cloud.config.url=http://localhost:8888
-#spring.cloud.config.profile=dev
+spring.cloud.config.url=http://localhost:8888
+spring.cloud.config.profile=dev
 management.endpoints.web.exposure.include=*
-#spring.cloud.vault.application-name=human-resources
-#spring.cloud.vault.host=localhost
-#spring.cloud.vault.port=8200
-#spring.cloud.vault.scheme=http
-#spring.cloud.vault.authentication=TOKEN
-#spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
-
+spring.cloud.vault.application-name=statemachine
+spring.cloud.vault.host=localhost
+#pring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+spring.boot.admin.client.instance.management-base-url= http://localhost:8082
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -26,11 +26,25 @@ spring.r2dbc.mybatis.r2dbc-url=r2dbc:mysql://localhost/human_resources_db
 spring.r2dbc.mybatis.username=root
 spring.r2dbc.mybatis.password=Antares927@
 
+
+
+
 spring.r2dbc.mybatis.map-underscore-to-camel-case= true
 
 #spring.liquibase.url = jdbc:mysql://localhost/human_resources_db?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.liquibase.user= root
 #spring.liquibase.password = Antares927@
 spring.main.allow-bean-definition-overriding=true
+eureka.client.serviceUrl.defaultZone= http://localhost:8761
+eureka.instance.hostname=localhost
+
+#-----Eureka-------
+eureka.instance.metadataMap.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.service-url.defaultZone=http://localhost:8761
+
+management.endpoint.health.show-details=always
+
+#-----Feign-------
+#reactive.feign.client.config.client-name= Products
 
 
