--- a/DiscoveryServer/src/main/resources/application.properties
+++ b/DiscoveryServer/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=DiscoveryServer
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+eureka.instance.client.registerWithEureka=false
+eureka.instance.client.fetchRegistry=false
