--- a/Microservices/StateMachine/src/main/resources/bootstrap.properties
+++ b/Microservices/StateMachine/src/main/resources/bootstrap.properties
@@ -1,22 +1,28 @@
-spring.application.name=statemachine
+server.port=0
+spring.application.name=StateMachine
+spring.main.allow-circular-references = true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/democracy_realm
+spring.cache.jcache.config=ehcache.xml
 spring.cloud.config.url=http://localhost:8888
 spring.cloud.config.profile=dev
 management.endpoints.web.exposure.include=*
-spring.cloud.vault.application-name=statemachine
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+
+#------------VAULT----------------------------------
+spring.cloud.vault.application-name=${spring.application.name}
 spring.cloud.vault.host=localhost
 #pring.cloud.vault.port=8200
 spring.cloud.vault.scheme=http
 spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+
+
 spring.boot.admin.client.instance.management-base-url= http://localhost:8082
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
-spring.main.allow-circular-references = true
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/democracy_realm
-spring.cache.jcache.config=ehcache.xml
 
 mybatis.mapperLocations=classpath*:com/democracy/hhrr/mybatis/r2dbc/mappers/*.xml
 
