--- a/Microservices/HumanResources/pom.xml
+++ b/Microservices/HumanResources/pom.xml
@@ -27,6 +27,13 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+		<!--
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-server</artifactId>
+			<version> 3.1.1</version>
+		</dependency>
+		-->
 	</dependencies>
 
 	<build>
