--- a/Microservices/StateMachine/pom.xml
+++ b/Microservices/StateMachine/pom.xml
@@ -21,6 +21,13 @@
 	</properties>
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
+		<dependency>
+			<groupId>org.springframework.statemachine</groupId>
+			<artifactId>spring-statemachine-core</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.playtika.reactivefeign/feign-reactor-core -->
 		<dependency>
 			<groupId>com.playtika.reactivefeign</groupId>
