--- a/ApiGateway/src/main/resources/application.yaml
+++ b/ApiGateway/src/main/resources/application.yaml
@@ -57,8 +57,8 @@ spring:
         predicates:
           - Path=/client/**
       routes[9]:
-        id: validatedepartment
-        uri: lb://VALIDATEDEPARTMENT
+        id:  validate-department
+        uri: lb://VALIDATE-DEPARTMENT
         predicates:
           - Path=/validatedepartment/**
       default-filters: TokenRelay
