--- a/Orchestrators/pom.xml
+++ b/Orchestrators/pom.xml
@@ -22,6 +22,7 @@
 		<module>server</module>
 		<module>client</module>
 		<module>validatedepartment</module>
+		<module>democracy-orchestrator</module>
 	</modules>
 
 	<properties>
